--- a/0x00-html_advanced/9-index.html
+++ b/0x00-html_advanced/9-index.html
@@ -6,7 +6,7 @@
         <title>Homepage - Techium</title>
         <meta name="description" content="Techium is a digital agency">
         <link rel="icon" type="image/x-icon" href="./favicon.ico">
-        <link rel="icon" type="image/x-icon" href="./favicon.png">
+        <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
         <header>
@@ -21,7 +21,7 @@
                     <article>Work 2</article>
                     <article>Work 3</article>
                 </section>
-                <section><h2>About us</h2></section>
+                <section><h2>About Us</h2></section>
                 <section><h2>Latest news</h2>
                     <article>Article 1</article>
                     <article>Article 2</article>
