--- a/0x00-html_advanced/12-index.html
+++ b/0x00-html_advanced/12-index.html
@@ -9,7 +9,7 @@
         <title>Homepage - Techium</title>
         <meta name="description" content="Techium is a digital agency" />
         <link rel="icon" type="image/x-icon" href="./favicon.ico" />
-        <link rel="icon" type="image/x-icon" href="./favicon.png" />
+        <link rel="icon" type="image/png" href="./favicon.png" />
     </head>
     <body>
         <header>
@@ -58,13 +58,12 @@
                         Ut alios omittam, hunc appello, quem ille unum secutus
                         est.
                     </h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
                 </article>
                 <article>
                        <p>Social</p>
                        <h3>Bestiarum vero nullum iudicium puto.</h3>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
-                     </article>
+                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>                     </article>
             </section>
             <section>
                 <h2>Testimonials</h2>
