--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -60,14 +60,14 @@
                                    <h2>About us</h2>
                                    <p>Everything about us</p>
                             </header>
-                            <div>
-                                   <h3>Who are we</h3>
+                                  <h3>Who are we</h3>
                             <p>
                                    Lorem ipsum dolor sit amet, consectetur adipisicing
                                    elit. Ipsum, omnis expedita! Eum, praesentium cumque
                                    accusantium rem, sit quaerat est nisi ratione, deserunt
                                    ducimus quidem iste dicta quibusdam atque maxime cum!
-                            </p>
+                            <div>
+                             </p>
                             <h3>Our culture</h3>
                             <p>
                                    Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -90,39 +90,52 @@
                             <header><h2>Latest news</h2></header> 
                             <div>
                                    <article>
-                                          <p>Career</p>
+                                          <header>
+                                                 <p>Career</p>
                                           <h3>Hoc loco tenere se Triarius non potuit.</h3>
-                                          <p>
-                                                 Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                 elit. Id Sextilius factum negabat. Quo tandem modo?
-                                                 At eum nihili facit; Quae contraria sunt his,
-                                                 malane?
-                                             </p>
+                                          </header>
+                                          <div>
+                                                 <p>
+                                                        Lorem ipsum dolor sit amet, consectetur adipiscing
+                                                        elit. Id Sextilius factum negabat. Quo tandem modo?
+                                                        At eum nihili facit; Quae contraria sunt his,
+                                                        malane?
+                                                    </p>
+                                          </div>  
                                       </article>
                                       <article>
-                                          <p>Digital Life</p>
-                                          <h3>
-                                              Ut alios omittam, hunc appello, quem ille unum
-                                              secutus est.
-                                          </h3>
-                                          <p>
-                                              Lorem ipsum dolor sit amet, consectetur adipiscing
-                                              elit. Id Sextilius factum negabat. Quo tandem modo?
-                                              At eum nihili facit; Quae contraria sunt his,
-                                              malane?
-                                          </p>
+                                             <header>
+                                                 <p>Digital Life</p>
+                                                 <h3>
+                                                     Ut alios omittam, hunc appello, quem ille unum
+                                                     secutus est.
+                                                 </h3>
+                                             </header>
+                                             <div>
+                                                 <p>
+                                                        Lorem ipsum dolor sit amet, consectetur adipiscing
+                                                        elit. Id Sextilius factum negabat. Quo tandem modo?
+                                                        At eum nihili facit; Quae contraria sunt his,
+                                                        malane?
+                                                    </p>
+                                             </div>
                                       </article>
                                       <article>
-                                          <p>Social</p>
-                                          <h3>Bestiarum vero nullum iudicium puto.</h3>
-                                          <p>
-                                              Lorem ipsum dolor sit amet, consectetur adipiscing
-                                              elit. Non igitur bene. Quid enim est a Chrysippo
-                                              praetermissum in Stoicis? Pugnant Stoici cum
-                                              Peripateticis. Prioris generis est docilitas,
-                                              memoria; Apparet statim, quae sint officia, quae
-                                              actiones.
-                                          </p>
+                                             <header>
+                                                 <p>Social</p>
+                                                 <h3>Bestiarum vero nullum iudicium puto.</h3>
+                                             </header>
+                                             <div>
+                                                 <p>
+                                                        Lorem ipsum dolor sit amet, consectetur adipiscing
+                                                        elit. Non igitur bene. Quid enim est a Chrysippo
+                                                        praetermissum in Stoicis? Pugnant Stoici cum
+                                                        Peripateticis. Prioris generis est docilitas,
+                                                        memoria; Apparet statim, quae sint officia, quae
+                                                        actiones.
+                                                    </p>
+
+                                             </div>
                                       </article> 
                             </div>
                      </div>
@@ -130,8 +143,8 @@
                 <section>
                     <div>
                            <header>
-                            <h2>Testimonials</h2>
-                            <p>Everything about us</p>
+                                   <h2>Testimonials</h2>
+                                   <p>We are more than a digital company</p>
                            </header>
                            <div>
                             <article>Testimonial 1</article>
