Fix 12 and 16 task

--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -37,16 +37,15 @@
                                    <h3>UX Design</h3>
                                    <h3>Web Development</h3>
                                    <h3>Social Media</h3>
-                            </div>
-                            
+                            </div>    
                        </div>
                 </section>
                 <section>
                        <div>
-                            <div>
+                            <header>
                                    <h2>Works</h2>
                                    <p>Take a look in our portfolio</p>
-                            </div>
+                            </header>
                             <div>
                                    <article><h3>Interior Design</h3></article>
                                    <article><h3>Web Development</h3></article>
@@ -60,15 +59,15 @@
                                    <h2>About us</h2>
                                    <p>Everything about us</p>
                             </header>
-                                  <h3>Who are we</h3>
-                            <p>
-                                   Lorem ipsum dolor sit amet, consectetur adipisicing
-                                   elit. Ipsum, omnis expedita! Eum, praesentium cumque
-                                   accusantium rem, sit quaerat est nisi ratione, deserunt
-                                   ducimus quidem iste dicta quibusdam atque maxime cum!
                             <div>
-                             </p>
-                            <h3>Our culture</h3>
+                                   <h3>Who are we</h3>
+                                   <p>
+                                          Lorem ipsum dolor sit amet, consectetur adipisicing
+                                          elit. Ipsum, omnis expedita! Eum, praesentium cumque
+                                          accusantium rem, sit quaerat est nisi ratione, deserunt
+                                          ducimus quidem iste dicta quibusdam atque maxime cum!
+                                   </p>
+                                   <h3>Our culture</h3>
                             <p>
                                    Lorem ipsum dolor sit amet, consectetur adipisicing
                                    elit. Ipsum, omnis expedita! Eum, praesentium cumque
@@ -82,7 +81,7 @@
                                    accusantium rem, sit quaerat est nisi ratione, deserunt
                                    ducimus quidem iste dicta quibusdam atque maxime cum!
                             </p>
-                            </div>    
+                            </div>   
                      </div>
                 </section>
                 <section>
