--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -56,7 +56,7 @@
                 <section>
                        <div>
                             <header>
-                                   <h2>About us</h2>
+                                   <h2>About Us</h2>
                                    <p>Everything about us</p>
                             </header>
                             <div>
@@ -106,9 +106,7 @@
                                              <header>
                                                  <p>Digital Life</p>
                                                  <h3>
-                                                     Ut alios omittam, hunc appello, quem ille unum
-                                                     secutus est.
-                                                 </h3>
+                                                     Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
                                              </header>
                                              <div>
                                                  <p>
@@ -116,6 +114,10 @@
                                                         elit. Id Sextilius factum negabat. Quo tandem modo?
                                                         At eum nihili facit; Quae contraria sunt his,
                                                         malane?
+                                                        Lorem ipsum dolor sit amet, consectetur adipiscing
+                                                        elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem?
+                                                        Non autem hoc: igitur ne illud quidem. Sed quod proximum
+                                                        fuit non vidit. Nos commodius agimus. An nisi populari fama?
                                                     </p>
                                              </div>
                                       </article>
