--- a/0x00-html_advanced/20-index.html
+++ b/0x00-html_advanced/20-index.html
@@ -17,8 +17,8 @@
               <div>
                      <div>
                             <a href="/"><span>Techium</span></a>
-                     </div>
-                     <nav></nav>                    
+                     </div>                    
+                     <nav><a href="/">Home</a></nav>                    
               </div>
        </header>
        <br>
@@ -37,6 +37,7 @@
               <section>
                      <div>
                             <header>
+                                   <a href="service.html">Services</a>
                                    <h2>Services</h2>
                                    <p>We work with you</p>
                             </header>
