--- a/0x00-html_advanced/26-styleguide.html
+++ b/0x00-html_advanced/26-styleguide.html
@@ -39,7 +39,7 @@
                     nibh in adipiscing blandit tempus accumsan.
                 </p>
             </section>
-            <!-- List -->
+            <!-- Lists -->
             <section>
                    <header><h2>List</h2></header>
                    <div>
