--- a/0x00-html_advanced/26-styleguide.html
+++ b/0x00-html_advanced/26-styleguide.html
@@ -41,7 +41,7 @@
             </section>
             <!-- Lists -->
             <section>
-                   <header><h2>List</h2></header>
+                   <header><h2>Lists</h2></header>
                    <div>
                           <h3>Unordered</h3>
                           <ul>
@@ -49,17 +49,14 @@
                                  <li>Sagittis adipiscing lorem eleifend.</li>
                                  <li>Felis enim feugiat dolore viverra.</li>
                           </ul>
-                          
-                   </div>
-                   <div>
+
                           <h3>Ordered</h3>
                           <ol>
                                  <li>Dolor pulvinar etiam magna etiam.</li>
                                  <li>Sagittis adipiscing lorem eleifend.</li>
                                  <li>Felis enim feugiat dolore viverra.</li>
                           </ol>
-                   </div>
-                   <div>
+
                           <h3>Definition</h3>
                           <dl>
                                  <dt>Definition List title</dt>
@@ -68,7 +65,7 @@
                                  <dl>A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dl>
                                  <dt>Water</dt>
                                  <dl>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dl>
-                          </dl>
+                          </dl>                      
                    </div>
             </section>
         </main>
