Upadate task 33 ND 32

--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -206,12 +206,12 @@
        <br>
        <!-- Footer -->
        <footer>
-              <p>
+              <address>
                      234 Washington Street
                      <br>
                      Urbana, Illinois
               </p>
-              <div>
+              </address>
                      <ul>
                             <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
                             <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
