--- a/0x00-html_advanced/index.html
+++ b/0x00-html_advanced/index.html
@@ -226,7 +226,7 @@
                      <ul>
                             <li>
                                    <a href="https://www.facebook.com/HolbertonSchool/">
-                                          <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                          <svg width="25" height="25" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                                  <title>
                                                  Facebook icon
                                                  </title>
@@ -236,7 +236,7 @@
                             </li>
                             <li>
                                    <a href="https://twitter.com/holbertonschool">
-                                          <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                          <svg width="25" height="25" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                                  <title>
                                                  Twitter icon
                                                  </title>
@@ -246,7 +246,7 @@
                             </li>
                             <li>
                                    <a href="https://www.instagram.com/holbertonschool/">
-                                          <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                          <svg width="25" height="25" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                                  <title>
                                                  Instagram icon
                                                  </title>
