--- a/0x04-flexbox/1-index.html
+++ b/0x04-flexbox/1-index.html
@@ -58,7 +58,7 @@
           </div>
         </div>
       </section>
-      <!– Services section –>
+      <!-– Services section -–>
       <section id="services" class="section section-services">
         <div class="container">
           <header class="section-header">
@@ -103,7 +103,7 @@
           </div>
         </div>
       </section>
-      <!– Works section –>
+      <!–- Works section -–>
       <section id="works" class="section section-works" data-section-theme="dark">
         <div class="container">
           <header class="section-header">
@@ -179,8 +179,8 @@
           </div>
         </div>
       </section>
-      <!– Latest news section –>
-      <section id="latest_news " class="section section-latest-news">
+      <!–- Latest news section -–>
+      <section id="latest_news" class="section section-latest-news">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Latest News</h2>
