--- a/0x04-flexbox/3-index.html
+++ b/0x04-flexbox/3-index.html
@@ -59,7 +59,7 @@
         </div>
       </section>
       <!– Services section –>
-      <section id="services" class="section">
+      <section id="services" class="section section-services">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Services</h2>
@@ -82,27 +82,28 @@
                   <h3 class="card-title"><a href="#">Content Strategy</a></h3>
                 </div>
               </li>
+            
+              <li class="col-1-3">
+                <div class="card-services">
+                  <h3 class="card-title"><a href="#">UX Design</a></h3>
+                </div>
+              </li>
+              <li class="col-1-3">
+                <div class="card-services">
+                   <h3 class="card-title"><a href="#">Web Development</a></h3>
+                </div>
+              </li>
+              <li class="col-1-3">
+                <div class="card-services">
+                   <h3 class="card-title"><a href="#">Social Media</a></h3>
+                </div>
+              </li>
             </ul>
-            <li class="col-1-3">
-              <div class="card-services">
-                <h3 class="card-title"><a href="#">UX Design</a></h3>
-              </div>
-            </li>
-            <li class="col-1-3">
-              <div class="card-services">
-                 <h3 class="card-title"><a href="#">Web Development</a></h3>
-              </div>
-            </li>
-            <li class="col-1-3">
-              <div class="card-services">
-                 <h3 class="card-title"><a href="#">Social Media</a></h3>
-              </div>
-            </li>
           </div>
         </div>
       </section>
       <!– Works section –>
-      <section id="works" class="section" data-section-theme="dark">
+      <section id="works" class="sectio section-works" data-section-theme="dark">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Works</h2>
@@ -151,7 +152,7 @@
         </div>
       </section>
       <!– About Us section –>
-      <section id="about" class="section">
+      <section id="about" class="section section-about-us">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">About Us</h2>
@@ -178,7 +179,7 @@
         </div>
       </section>
       <!– Latest news section –>
-      <section id="latest_news" class="section">
+      <section id="latest_news" class="section section-latest-news">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Latest News</h2>
@@ -223,7 +224,7 @@
         </div>
       </section>
       <!– Testimonials section –>
-      <section id="testimonial" class="section">
+      <section id="testimonial" class="section section-testimonial">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Testimonials</h2>
@@ -266,7 +267,7 @@
         </div>
       </section>
       <!– Contact section –>
-      <section id="contact" class="section">
+      <section id="contact" class="section section-contact">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Contact</h2>
