--- a/0x04-flexbox/100-article.html
+++ b/0x04-flexbox/100-article.html
@@ -73,7 +73,7 @@
                    </ol>
                    <p>Morbi pharetra congue ante ac tincidunt. Donec euismod eu mauris nec laoreet Praesent id sodales ipsum. Aliquam erat volutpat. Ut porta sem eget libero faucibus, eget convallis nisi finibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum accumsan euismod nunc quis viverra.</p>
                    <figure>
-                       <img src="./images/imagess.jpg" alt="Glasses, baby converse shoes, black bag, wipes on a dresser with an open drawer" width="620" height="350">
+                       <img src="imagess.jpg" alt="Glasses, baby converse shoes, black bag, wipes on a dresser with an open drawer" width="620" height="350">
                        <figcaption class="img-caption">Pugnant Stoici cum Peripateticis. Prioris generis est docilitas</figcaption>
                    </figure>
                    <p>Quare conare, quaeso. Dici enim nihil potest verius. Primum divisit ineleganter; Suam denique cuique naturam esse ad vivendum ducem.</p>
@@ -81,11 +81,11 @@
                    <p>Omnia contraria, quos etiam insanos esse vultis. Tibi hoc incredibile, quod beatissimum.</p>
                    <h2>Piso igitur hoc modo, vir optimus tuique, ut scis, amantissimus.</h2>
                    <p> <a href="https://www.holbertonschool.com/" target="_blank" rel="noopener">Apparet statim, quae sint officia, quae actiones.</a> Quae in controversiam veniunt, de iis, si placet, disseramus.</p>
-                       <ol>
+                       <ul>
                            <li>Tubulum fuisse, qua illum, cuius is condemnatus est rogatione, P.</li>
                            <li>Quis est autem dignus nomine hominis, qui unum diem totum velit esse ingenere isto voluptatis?</li>
                            <li>Sed in rebus apertissimis nimium longi sumus.</li>
-                       </ol>
+                       </ul>
                    <p> Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Atqui, inquam, Cato, si istud optinueris, traducas me ad te totum licebit. Nemo nostrum istius generis asotos iucunde putat vivere. Res enim se praeclare habebat, et quidem in utraque parte. Qui autem esse poteris, nisi te amor ipse ceperit? Ita fit cumgravior, tum etiam splendidior oratio. De vacuitate doloris eadem sententia erit. Sin tantum modo ad indicia veteris memoriae cognoscenda, curiosorum.</p>
             </article>
             <!-- Aside section -->
