--- a/0x0D-JQuery_advanced/3-index.html
+++ b/0x0D-JQuery_advanced/3-index.html
@@ -7,8 +7,8 @@
         <script
             src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
             integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
-            crossorigin="anonymous"
-        ></script>
+            crossorigin="anonymous">
+        </script>
         <script type="application/javascript">
             if (typeof jQuery === "undefined") {
                 console.log("jQuery has not been loaded correctly");
@@ -24,23 +24,10 @@
 		<script type="application/javascript">
             $( document ).ready(function() {
                 function createFamilyTree() {
-                    $( "body" ).append(
-						$("body").append("<table>");
-							$("table").append("<thead>", "<tbody>")
-							$("thead").append("<tr>");
-							$("tbody").append("<tr>", "<tr>", "<tr>");
-							$("tr").eq(0).append("<th>", "<th>");
-							$("tr").eq(1).append("<td>", "<td>");
-							$("tr").eq(2).append("<td>", "<td>");
-							$("tr").eq(3).append("<td>", "<td>");
-							$("tr th").eq(0).text("Firstname");
-							$("tr th").eq(1).text("Lastname");
-							$("tr td").eq(0).text("Guillaume")
-							$("tr td").eq(1).text("Salva")
-							$("tr td").eq(2).text("Pauline")
-							$("tr td").eq(3).text("Salva")
-							$("tr td").eq(4).text("Antoine")
-							$("tr td").eq(5).text("Salva")
+                    $("body").append("<table>\n<thead style=\"font-weight: bold; font-size: 2rem;\">\n<tr>\n<th>Firstname</th>\n<th>Lastname</th>\n</tr>\n</thead>\
+                        \n<tbody style=\"font-weight: 500; font-size: 1.5rem;\">\n<tr>\n<td>Guillaume</td>\n<td>Salva</td>\n</tr>\n<tr>\n<td>Paulette</td>\n\
+                        <td>Salva</td>\n</tr>\n<tr>\n<td>Antoine</td>\n<td>Salva</td>\n</tr>\n</tbody>\n</table>"
+                    );
                 }
                 createFamilyTree();
             }
